<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <import type="android.view.View"></import> <import type="android.text.TextUtils"/>
        <variable
            name="Property"
            type="com.example.hrm.viewmodel.RequestPropertyVIewModel" />
    </data>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:paddingRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_centerVertical="true"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="@dimen/largeText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ADD_REQUEST_HEADER"></TextView>
                <ImageView
                    android:id="@+id/btn_close"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/close"
                    android:layout_alignParentRight="true"></ImageView>
            </RelativeLayout>
            <View
                android:background="@color/gray_bold"
                android:layout_below="@id/header"
                android:layout_width="match_parent"
                android:layout_height="1dp"></View>
            <LinearLayout
                android:id="@+id/content"
                android:layout_below="@id/header"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_marginTop="20dp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/nomarlText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Type"></TextView>
                <AutoCompleteTextView
                    android:adapter="@{Property.adapterType}"
                    android:focusable="false"
                    android:cursorVisible="false"
                    android:textColor="@color/black"
                    android:drawableRight="@drawable/down"
                    android:id="@+id/AutoCompleteTextViewType"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:textAlignment="textStart"
                    android:textColorHint="@color/hintColorGray"
                    android:hint="@string/HINT_SELECT_TYPE"
                    android:textSize="@dimen/miniText"
                    android:layout_width="match_parent"
                    android:background="@drawable/custom_edit_text_blue"
                    android:layout_height="50dp"></AutoCompleteTextView>
                <TextView
                    android:id="@+id/txt_mess_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/SelectType"
                    android:textColor="@color/danger"
                    android:textSize="@dimen/miniText"
                    android:visibility="@{(TextUtils.isEmpty(Property.requestType)&amp;&amp;Property.isSubmitted) ? View.VISIBLE:View.GONE}"></TextView>
                <TextView
                    android:layout_marginTop="20dp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/nomarlText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/DETAIL_GROUP_PROPERTY"></TextView>
                <AutoCompleteTextView
                    android:adapter="@{Property.adapterGroup}"
                    android:focusable="false"
                    android:cursorVisible="false"
                    android:textColor="@color/black"
                    android:drawableRight="@drawable/down"
                    android:id="@+id/AutoCompleteTextViewGroup"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:textAlignment="textStart"
                    android:textColorHint="@color/hintColorGray"
                    android:hint="@string/HINT_PROPERTY_GROUP"
                    android:textSize="@dimen/miniText"
                    android:layout_width="match_parent"
                    android:background="@drawable/custom_edit_text_blue"
                    android:layout_height="50dp"></AutoCompleteTextView>
                <TextView
                    android:id="@+id/txt_mess_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/SelectType"
                    android:textColor="@color/danger"
                    android:textSize="@dimen/miniText"
                    android:visibility="@{(TextUtils.isEmpty(Property.groupProperty)&amp;&amp;Property.isSubmitted) ? View.VISIBLE:View.GONE}"></TextView>
                <TextView
                    android:layout_marginTop="20dp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/nomarlText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/DETAIL_REASON"></TextView>
                <EditText
                    android:textColor="@color/black"
                    android:text="@={Property.reason}"
                    android:id="@+id/edt_reason"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:textAlignment="textStart"
                    android:textColorHint="@color/hintColorGray"
                    android:hint="@string/ENTER_HERE"
                    android:textSize="@dimen/miniText"
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:background="@drawable/custom_edit_text_blue"
                    android:layout_height="wrap_content"></EditText>
                <TextView
                    android:id="@+id/txt_mess_reason"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/ReasonIsRequired"
                    android:textColor="@color/danger"
                    android:textSize="@dimen/miniText"
                    android:visibility="@{(TextUtils.isEmpty(Property.reason)&amp;&amp;Property.isSubmitted) ? View.VISIBLE : View.GONE}"
                    ></TextView>
                <TextView
                    android:layout_marginTop="20dp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/nomarlText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/DETAIL"></TextView>
                <EditText
                    android:textColor="@color/black"
                    android:text="@={Property.description}"
                    android:id="@+id/edt_code"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:textAlignment="textStart"
                    android:textColorHint="@color/hintColorGray"
                    android:hint="@string/ENTER_HERE"
                    android:textSize="@dimen/miniText"
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:background="@drawable/custom_edit_text_blue"
                    android:layout_height="wrap_content"></EditText>
                <TextView
                    android:id="@+id/txt_mess_"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/DescriptionIsRequired"
                    android:textColor="@color/danger"
                    android:textSize="@dimen/miniText"
                    android:visibility="@{(TextUtils.isEmpty(Property.description)&amp;&amp;Property.isSubmitted) ? View.VISIBLE : View.GONE}"
                    ></TextView>

            </LinearLayout>

            <RelativeLayout
                android:layout_below="@id/content"
                android:layout_marginBottom="20dp"
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_centerHorizontal="true"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:id="@+id/btn_add"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:padding="10dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/botron"
                    >
                    <TextView
                        android:id="@+id/txtSubmit"
                        android:paddingLeft="30dp"
                        android:paddingRight="30dp"
                        android:textColor="@color/white"
                        android:gravity="center_horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/SUBMIT"></TextView>
                </LinearLayout>
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>



</RelativeLayout>
</layout>
