<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_centerVertical="true"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="@dimen/largeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Inactive Account"></TextView>
        <ImageView
            android:id="@+id/btn_close"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/close"
            android:layout_alignParentRight="true"></ImageView>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/nomarlText"
            android:textColor="@color/black"
            android:text="@string/Manager">
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/nomarlText"
            android:textColor="@color/toast_failed"
            android:text="@string/selectManager">
        </TextView>
    </LinearLayout>
    <AutoCompleteTextView
        android:id="@+id/AutoCompleteTextView"
        android:layout_marginTop="10dp"
        android:background="@drawable/custom_edit_text_blue"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:drawableRight="@drawable/down"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/selectManagerHint"></AutoCompleteTextView>
    <Button
         android:layout_gravity="center_horizontal"
        android:id="@+id/btn_ok"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@drawable/botron"
        android:text="Submit"></Button>
</LinearLayout>